--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "gatsby-starter-default",
-  "description": "Gatsby default starter",
-  "version": "1.0.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "private": true,
+  "name": "rhode-medizin",
+  "author": "Philip Schmitt",
+  "version": "0.0.0",
   "dependencies": {
-    "gatsby": "next",
-    "gatsby-plugin-react-helmet": "next",
-    "gatsby-plugin-manifest": "next",
-    "gatsby-plugin-offline": "next",
+    "gatsby": "^2.0.0-beta.61",
+    "gatsby-plugin-manifest": "^2.0.2-beta.3",
+    "gatsby-plugin-offline": "^2.0.0-beta.6",
+    "gatsby-plugin-react-helmet": "^3.0.0-beta.4",
+    "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0"
@@ -19,14 +20,25 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write '**/*.js'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "format": "prettier --ignore-path .gitignore --write \"**/*.{js,jsx,json,md,yml}\"",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "npm run lint:es && npm run lint:style",
+    "lint:es": "eslint --ignore-path .gitignore \"**/*.{js,jsx}\"",
+    "lint:style": "stylelint \"src/**/*.{js,jsx}\""
   },
   "devDependencies": {
-    "prettier": "^1.13.7"
+    "eslint": "^4.19.1",
+    "babel-eslint": "^8.2.6",
+    "eslint-config-airbnb": "^17.0.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-prettier": "^2.6.2",
+    "eslint-plugin-react": "^7.10.0",
+    "prettier": "^1.14.0"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "https://github.com/"
   }
 }
