--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
-    "styled-components": "^3.3.3"
+    "styled-components": "^3.3.3",
+    "styled-normalize": "^8.0.0"
   },
   "keywords": [
     "gatsby"
