Add theme configuration via styled-components ThemeProvider.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
   },
   "rules": {
     "react/jsx-one-expression-per-line": "off",
+    "react/destructuring-assignment": "never",
     "no-unused-expressions": ["error", { "allowTaggedTemplates": true }]
   }
 }
