Extract global styles into separate module. See https://github.com/Undistraction/gatsby-starter-skeleton via https://spectrum.chat/thread/4bc20268-9bb0-4b5b-8c56-4e2c3bb56121

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,7 @@
   },
   "rules": {
     "react/jsx-one-expression-per-line": "off",
-    "react/destructuring-assignment": "never",
+    "react/destructuring-assignment": "off",
     "no-unused-expressions": ["error", { "allowTaggedTemplates": true }]
   }
 }
