--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
     "styled-components": "^3.3.3",
-    "styled-normalize": "^8.0.0"
+    "styled-reset": "^1.3.6"
   },
   "keywords": [
     "gatsby"
