Update git information and readme.

--- a/package.json
+++ b/package.json
@@ -48,6 +48,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/"
+    "url": "https://github.com/maeh2k/rhode-medizin"
   }
 }
