Use gatsby-netlify plugin.

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "babel-plugin-styled-components": "^1.5.1",
     "gatsby": "^2.0.0-beta.61",
     "gatsby-plugin-manifest": "^2.0.2-beta.3",
+    "gatsby-plugin-netlify": "^2.0.0-beta.5",
     "gatsby-plugin-offline": "^2.0.0-beta.6",
     "gatsby-plugin-react-helmet": "^3.0.0-beta.4",
     "gatsby-plugin-styled-components": "^3.0.0-beta.3",
