--- a/package.json
+++ b/package.json
@@ -5,15 +5,19 @@
   "version": "0.0.0",
   "dependencies": {
     "babel-plugin-styled-components": "^1.5.1",
-    "gatsby": "^2.0.0-beta.61",
-    "gatsby-plugin-manifest": "^2.0.2-beta.3",
-    "gatsby-plugin-netlify": "^2.0.0-beta.5",
-    "gatsby-plugin-offline": "^2.0.0-beta.6",
-    "gatsby-plugin-react-helmet": "^3.0.0-beta.4",
-    "gatsby-plugin-styled-components": "^3.0.0-beta.3",
+    "dotenv": "^6.0.0",
+    "gatsby": "next",
+    "gatsby-plugin-manifest": "next",
+    "gatsby-plugin-netlify": "next",
+    "gatsby-plugin-offline": "next",
+    "gatsby-plugin-react-helmet": "next",
+    "gatsby-plugin-styled-components": "next",
+    "gatsby-source-contentful": "next",
+    "gatsby-transformer-remark": "next",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-router-dom": "^4.3.1",
     "react-helmet": "^5.2.0",
     "styled-components": "^3.3.3",
     "styled-reset": "^1.3.6"
@@ -32,8 +36,8 @@
     "lint:style": "stylelint \"src/**/*.{js,jsx}\""
   },
   "devDependencies": {
-    "eslint": "^4.19.1",
     "babel-eslint": "^8.2.6",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-import": "^2.13.0",
