Fetch employees from contentful.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
   "rules": {
     "react/jsx-one-expression-per-line": "off",
     "react/destructuring-assignment": "off",
+    "react/forbid-prop-types": ["error", { "forbid": ["any", "array"] }],
     "no-unused-expressions": ["error", { "allowTaggedTemplates": true }]
   }
 }
