--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "gatsby-plugin-react-helmet": "next",
     "gatsby-plugin-styled-components": "next",
     "gatsby-source-contentful": "next",
-    "gatsby-transformer-remark": "next",
+    "gatsby-transformer-remark": "^2.1.1-rc.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-router-dom": "^4.3.1",
     "react-helmet": "^5.2.0",
+    "react-router-dom": "^4.3.1",
     "styled-components": "^3.3.3",
     "styled-reset": "^1.3.6"
   },
