--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "gatsby-plugin-react-helmet": "next",
     "gatsby-plugin-styled-components": "next",
     "gatsby-source-contentful": "next",
-    "gatsby-transformer-remark": "^2.1.1-rc.0",
+    "gatsby-transformer-remark": "next",
     "prop-types": "^15.6.2",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
     "react-router-dom": "^4.3.1",
-    "styled-components": "^3.4.6",
+    "styled-components": "^4.0.0-beta.8",
     "styled-reset": "^1.4.0"
   },
   "keywords": [
