--- a/package.json
+++ b/package.json
@@ -4,23 +4,24 @@
   "author": "Philip Schmitt",
   "version": "0.0.0",
   "dependencies": {
-    "babel-plugin-styled-components": "^1.7.1",
+    "babel-plugin-styled-components": "^1.8.0",
     "dotenv": "^6.0.0",
-    "gatsby": "^2.0.7",
-    "gatsby-plugin-manifest": "^2.0.2",
-    "gatsby-plugin-netlify": "^2.0.0",
+    "gatsby": "^2.0.17",
+    "gatsby-plugin-manifest": "^2.0.4",
+    "gatsby-plugin-netlify": "^2.0.1",
     "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-styled-components": "^3.0.0",
+    "gatsby-plugin-subfont": "^1.0.1",
     "gatsby-source-contentful": "^2.0.1",
-    "gatsby-transformer-remark": "^2.1.3",
+    "gatsby-transformer-remark": "^2.1.6",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-helmet": "^5.2.0",
     "react-router-dom": "^4.3.1",
-    "styled-components": "^4.0.0-beta.8",
-    "styled-reset": "^1.5.0"
+    "styled-components": "^4.0.0-beta.9",
+    "styled-reset": "^1.5.1"
   },
   "keywords": [
     "gatsby"
