--- a/package.json
+++ b/package.json
@@ -5,22 +5,22 @@
   "version": "0.0.0",
   "dependencies": {
     "babel-plugin-styled-components": "^1.8.0",
-    "dotenv": "^6.0.0",
-    "gatsby": "^2.0.17",
-    "gatsby-plugin-manifest": "^2.0.4",
+    "dotenv": "^6.1.0",
+    "gatsby": "^2.0.22",
+    "gatsby-plugin-manifest": "^2.0.5",
     "gatsby-plugin-netlify": "^2.0.1",
-    "gatsby-plugin-offline": "^2.0.5",
+    "gatsby-plugin-offline": "^2.0.6",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-styled-components": "^3.0.0",
-    "gatsby-source-contentful": "^2.0.1",
-    "gatsby-transformer-remark": "^2.1.6",
+    "gatsby-source-contentful": "^2.0.3",
+    "gatsby-transformer-remark": "^2.1.7",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-helmet": "^5.2.0",
     "react-router-dom": "^4.3.1",
-    "styled-components": "^4.0.0-beta.9",
-    "styled-reset": "^1.5.1",
+    "styled-components": "^4.0.0-beta.11",
+    "styled-reset": "^1.6.0",
     "subfont": "^3.6.2"
   },
   "keywords": [
@@ -29,7 +29,8 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "build-subfont": "gatsby build && node_modules/.bin/subfont public -i --no-recursive --inline-css --inline-fonts --font-display block",
+    "build-subfont": "gatsby build && node_modules/.bin/subfont public -i --no-recursive --inline-css --inline-fonts",
+    "build-subfont-preload": "gatsby build && node_modules/.bin/subfont public -i --no-recursive --inline-css",
     "develop": "gatsby develop",
     "format": "prettier --ignore-path .gitignore --write \"**/*.{js,jsx,json,md,yml}\"",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -38,20 +39,20 @@
     "lint:style": "stylelint \"src/**/*.{js,jsx}\""
   },
   "devDependencies": {
-    "babel-eslint": "^9.0.0",
-    "eslint": "^5.6.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.7.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-prettier": "^2.6.2",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
     "prettier": "^1.14.3",
-    "stylelint": "^9.5.0",
+    "stylelint": "^9.6.0",
     "stylelint-config-prettier": "^4.0.0",
     "stylelint-config-recommended": "^2.1.0",
     "stylelint-config-styled-components": "^0.1.1",
-    "stylelint-processor-styled-components": "^1.3.2"
+    "stylelint-processor-styled-components": "^1.5.0"
   },
   "repository": {
     "type": "git",
