--- a/package.json
+++ b/package.json
@@ -6,20 +6,20 @@
   "dependencies": {
     "babel-plugin-styled-components": "^1.8.0",
     "dotenv": "^6.1.0",
-    "gatsby": "^2.0.22",
-    "gatsby-plugin-manifest": "^2.0.5",
-    "gatsby-plugin-netlify": "^2.0.1",
-    "gatsby-plugin-offline": "^2.0.6",
-    "gatsby-plugin-react-helmet": "^3.0.0",
-    "gatsby-plugin-styled-components": "^3.0.0",
-    "gatsby-source-contentful": "^2.0.3",
-    "gatsby-transformer-remark": "^2.1.7",
+    "gatsby": "^2.0.37",
+    "gatsby-plugin-manifest": "^2.0.7",
+    "gatsby-plugin-netlify": "^2.0.3",
+    "gatsby-plugin-offline": "^2.0.11",
+    "gatsby-plugin-react-helmet": "^3.0.1",
+    "gatsby-plugin-styled-components": "^3.0.1",
+    "gatsby-source-contentful": "^2.0.10",
+    "gatsby-transformer-remark": "^2.1.11",
     "prop-types": "^15.6.2",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
     "react-helmet": "^5.2.0",
     "react-router-dom": "^4.3.1",
-    "styled-components": "^4.0.0-beta.11",
+    "styled-components": "^4.0.3",
     "styled-reset": "^1.6.0",
     "subfont": "^3.6.2"
   },
@@ -40,7 +40,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
-    "eslint": "^5.7.0",
+    "eslint": "^5.8.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-import": "^2.14.0",
@@ -48,12 +48,12 @@
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
     "prettier": "^1.14.3",
-    "stylelint": "^9.6.0",
+    "stylelint": "^9.7.1",
     "stylelint-config-prettier": "^4.0.0",
     "stylelint-config-recommended": "^2.1.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.5.0",
-    "@types/styled-components": "^4.0.1"
+    "@types/styled-components": "^4.0.3"
   },
   "repository": {
     "type": "git",
