--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
     "babel-plugin-styled-components": "^1.8.0",
     "dotenv": "^6.1.0",
     "gatsby": "^2.0.37",
+    "gatsby-image": "^2.0.19",
     "gatsby-plugin-manifest": "^2.0.7",
     "gatsby-plugin-netlify": "^2.0.3",
     "gatsby-plugin-offline": "^2.0.11",
     "gatsby-plugin-react-helmet": "^3.0.1",
+    "gatsby-plugin-sharp": "^2.0.11",
     "gatsby-plugin-styled-components": "^3.0.1",
     "gatsby-source-contentful": "^2.0.10",
+    "gatsby-source-filesystem": "^2.0.7",
     "gatsby-transformer-remark": "^2.1.11",
+    "gatsby-transformer-sharp": "^2.1.7",
     "prop-types": "^15.6.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
