--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -4,5 +4,8 @@
     "stylelint-config-recommended",
     "stylelint-config-styled-components",
     "stylelint-config-prettier"
-  ]
+  ],
+  "rules": {
+    "declaration-block-no-duplicate-properties": null
+  }
 }
