--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-transformer-sharp": "^2.1.9",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
+    "react-cookie-consent": "^2.0.0",
     "react-dom": "^16.7.0",
     "react-helmet": "^5.2.0",
     "react-router-dom": "^4.3.1",
