Disable subfont requirements
2:51:52 PM: /opt/buildhome/python2.7/local/lib/python2.7/site-packages/pip/_vendor/urllib3/util/ssl_.py:150: InsecurePlatformWarning: A true SSLContext object is not available. This prevents urllib3 from configuring SSL appropriately and may cause certain SSL connections to fail. You can upgrade to a newer version of Python to solve this. For more information, see https://urllib3.readthedocs.io/en/latest/advanced-usage.html#ssl-warnings
2:51:52 PM:   InsecurePlatformWarning
2:51:52 PM:   Could not find a version that satisfies the requirement fonttools (from -r requirements.txt (line 6)) (from versions: )
2:51:52 PM: No matching distribution found for fonttools (from -r requirements.txt (line 6))
2:51:52 PM: /opt/buildhome/python2.7/local/lib/python2.7/site-packages/pip/_vendor/urllib3/util/ssl_.py:150: InsecurePlatformWarning: A true SSLContext object is not available. This prevents urllib3 from configuring SSL appropriately and may cause certain SSL connections to fail. You can upgrade to a newer version of Python to solve this. For more information, see

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@
 #
 # will be automatically installed by netlify
 # see https://www.netlify.com/docs/build-settings/#python
-fonttools
-brotli
-zopfli
+#fonttools
+#brotli
+#zopfli
